libs/wingc/src/snapshots/VALID_JSIR_optionals.snap
---
source: libs/wingc/src/lib.rs
description: "../../examples/tests/valid/optionals.w"
---
const $stdlib = require('@winglang/wingsdk');
const $outdir = process.env.WINGSDK_SYNTH_DIR ?? ".";

function __app(target) {
	switch (target) {
		case "sim":
			return $stdlib.sim.App;
		case "tfaws":
		case "tf-aws":
			return $stdlib.tfaws.App;
		default:
			throw new Error(`Unknown WING_TARGET value: "${process.env.WING_TARGET ?? ""}"`);
	}
}
const $App = __app(process.env.WING_TARGET);

class MyApp extends $App {
constructor() {
  super({ outdir: $outdir });
  
  let a = 5;
  const f = new $stdlib.core.Inflight({
    code: $stdlib.core.NodeJsCode.fromFile(require('path').resolve(__dirname, "proc.8eb95bcbc154530931e15fc418c8b1fe991095671409552099ea1aa596999ede/index.js")),
    entrypoint: "$proc",
    
  });
  f(a);
  f();
}
}
new MyApp().synth();
